# RescueForge

./: .env.example  .gitignore  LICENSE  README.md  RescueForge_Final.pptx  build_presentation.cjs  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
autocad-plugin/: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  worker.py
backend/app/api/: routes.py  tasks.py  websocket.py
backend/app/models/: schemas.py
backend/app/pipeline/: compliance_doc.py  dwg_converter.py  dxf_parser.py  pdf_exporter.py  plan_generator.py  room_classifier.py  room_detector.py
backend/app/services/: openrouter.py
backend/app/utils/: corridor_routing.py  geometry.py  symbols.py  translations.py
backend/tests/: conftest.py  test_api_routes.py  test_api_routes_extended.py  test_corridor_routing.py  test_dwg_converter.py  test_dxf_parser.py  test_error_handling.py  test_openrouter.py  test_performance.py  test_plan_generator.py  test_rate_limiting.py  test_real_world_dxf.py  test_room_classifier.py  test_room_detector.py  test_symbol_collision.py  test_symbols_extended.py  test_tasks.py  test_translations.py  test_visual_regression.py  test_websocket.py
docs/: DEMO_SCRIPT.md  RescueForge_Presentation.pptx  RescueForge_Presentation_v2.pptx  RescueForge_Presentation_v3.pptx  api-documentation.md  architecture.md  build_presentation_v4.cjs  swiss-guideline-specs.md  test-data-sources.md  tool-research.md
frontend/: Dockerfile  cypress.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+38 files in other folders)
